--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -4,7 +4,7 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
-body {
+ body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -34,13 +34,15 @@ p {
     margin: 0 0 25px;
     font-size: 18px;
     line-height: 1.5;
+    padding: 0 10px 0;
 }
 
-@media(min-width:767px) {
+@media(min-width:769px) {
     p {
         margin: 0 0 35px;
         font-size: 20px;
         line-height: 1.6;
+        padding: 0;
     }
 }
 
@@ -110,15 +112,16 @@ a:focus {
     background-color: rgba(255,255,255,.3);
 }
 
-@media(min-width:767px) {
+@media(min-width:769px) {
     .navbar {
-        padding: 20px 0;
+        padding: 0px 0;
         border-bottom: 0;
         letter-spacing: 1px;
         background: 0 0;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
+        background-color: #219ab3;
     }
 
     .top-nav-collapse {
@@ -159,7 +162,7 @@ a:focus {
     font-size: 18px;
 }
 
-@media(min-width:767px) {
+@media(min-width:769px) {
     .intro {
         height: 100%;
         padding: 0;
@@ -249,9 +252,24 @@ a:focus {
 }
 
 .content-section {
-    padding-top: 100px;
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
+.content-about {
+    text-align: left;
+}
+.content-brief {
+    margin-top: 50px;
+    margin-bottom: 20px;
+    margin-left: 0;
+    margin-right: 0;
+    background-color: rgba(33, 154, 179, 0.45);
+    border-radius: 5px;
+    line-height: 175%;
+}
 .download-section {
     width: 100%;
     padding: 50px 0;
@@ -273,13 +291,19 @@ a:focus {
     margin-top: 100px;
 }
 
-@media(min-width:767px) {
+@media(min-width:769px) {
+    .content-about {
+        margin-top: 0px;
+    }
+    .content-brief {
+        margin-top: 0px;
+    }
     .content-section {
-        padding-top: 250px;
+        padding-top: 100px;
     }
 
     .download-section {
-        padding: 100px 0;
+        padding: 150px 0;
     }
 
     #map {
@@ -315,6 +339,7 @@ a:focus {
     border: 1px solid #fff;
     color: #fff;
     background-color: transparent;
+    margin-bottom: 10px;
 }
 
 .btn-download:hover,
@@ -328,6 +353,30 @@ a:focus {
 ul.banner-social-buttons {
     margin-top: 0;
 }
+@media(min-width:769px){
+    ul.list-brief {
+        margin-top: 0;
+        margin-bottom: 10px;
+        list-style: none;
+        padding-top: 30px;
+        padding-bottom: 18px;
+        padding-left: 0;
+        text-align: left;
+    }
+    ul.list-brief li {
+        padding: 0px 0px 2px;
+    }
+}
+
+ul.list-brief {
+    margin:0;
+    padding-top: 10px;
+    list-style: none;
+    text-align: left;
+}
+ul.list-brief li {
+   padding: 0;
+}
 
 @media(max-width:1199px) {
     ul.banner-social-buttons {
@@ -335,7 +384,7 @@ ul.banner-social-buttons {
     }
 }
 
-@media(max-width:767px) {
+@media(max-width:769px) {
     ul.banner-social-buttons li {
         display: block;
         margin-bottom: 20px;
