--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -141,12 +141,12 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+    background: url(../img/sadu.png) repeat bottom center scroll;
     background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    background-size: contain;
+    -o-background-size: contain;
 }
 
 .intro .intro-body {
@@ -164,7 +164,7 @@ a:focus {
 
 @media(min-width:769px) {
     .intro {
-        height: 100%;
+        height: 40%;
         padding: 0;
     }
 
@@ -267,6 +267,15 @@ a:focus {
     margin-left: 0;
     margin-right: 0;
     background-color: rgba(33, 154, 179, 0.45);
+    border-radius: 5px;
+    line-height: 175%;
+}
+.content-brief-head {
+    margin-top: 50px;
+    margin-bottom: 20px;
+    margin-left: 0;
+    margin-right: 0;
+    background-color: rgba(256, 256, 256, 0.75);
     border-radius: 5px;
     line-height: 175%;
 }
